[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcolor"
version = "0.1.0"
description = "Torchcolor is a lightweight Python package to enhance readability of printing and logging information into the terminal with Pytorch module coloring support."
authors = [
    {name = "Antoine Debouchage", email = "antoine311200@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/antoine311200/torchcolor"
Issues = "https://github.com/antoine311200/torchcolor/issues"

[tool.setuptools.packages]
find = { include = ["torchcolor", "torchcolor.*"] }

[project.optional-dependencies]
torch = ["torch"]
